--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -3,7 +3,9 @@
 <html lang="fr">
 
 <head>
-
+<link rel="stylesheet" type="text/css" href="css/resume.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="http://use.edgefonts.net/source-sans-pro.js"></script>
 <meta charset="utf-8">
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
@@ -29,25 +31,34 @@
  <div id="wrapper">
  	
 <HEADER>
- 	<H1>Rajae ARHOUNE</H1>
- 	<h2>Ingénieur en développement logiciel des systèmes d’information</h2>
- 	<img src="images/ph.png" height="10%" width="10%">
- 	<section>
- 		Nationalité : Marocaine<br>
- 		Age : 22 ans
- 		Mail : arhoune.rajae@gmail.com<br>
- 		Tél : 06 12 04 03 74 <br>
- 		Adresse : 2 rue des Archives - Brest France <br>
- 	</section>
+	    <H1>Rajae ARHOUNE</H1>
+	 	<h2>Ingénieur en développement logiciel des systèmes d’information</h2>
+<hr>
+ 	<div class="info">
+ 	  
+ 		<i class="fa fa-flag-o"></i> <strong>Nationalité :</strong> Marocaine<br>
+ 		<i class="fa fa-user" aria-hidden="true"></i> <strong>Age :</strong> 22 ans <br>
+ 		<i class="fa fa-envelope-o" aria-hidden="true"></i><strong> Mail :</strong> <strong class="mail">arhoune.rajae@gmail.com</strong><br>
+ 		<i class="fa fa-phone" aria-hidden="true"></i> <strong>Tél :</strong> 06 12 04 03 74 <br>
+ 		<i class="fa fa-map-marker" aria-hidden="true"></i> <strong>Adresse :</strong> 2 rue des Archives - Brest France <br>
+ 		<i class="fa fa-car" aria-hidden="true"></i> Pérmis B 
+ 	</div>
+
+ 	<div class="photo">
+ 		<img src="images/ph.png">
+ 	</div>
+
  </HEADER>
- <section>
+
+ <div class="main">
+ 	<section>
  	<article>
  		<dt><h3>FORMATIONS</h3></dt>
-			<dd>2018 : Master 2 Développement Logiciel des Systèmes d’Informations à l’Université de Bretagne Occidentale Brest, France.</dd>
-			<dd>2017 : Master 1 Ingénierie des systèmes d’information à l’Université Cadi Ayyad, Faculté des Sciences Semlalia, Marrakech (FSSM).</dd>
-			<dd>2016 : LICENCE en informatique à la FSSM à Marrakech.</dd>
-			<dd>2015 : DEUG en sciences mathématiques et informatiques à la FSSM à Marrakech.</dd>
-			<dd>2013 : Baccalauréat sciences mathématiques B à Marrakech.</dd>
+			<dd><strong>2018 : </strong>Master 2 Développement Logiciel des Systèmes d’Informations à l’Université de Bretagne Occidentale Brest, France.</dd>
+			<dd><strong>2017 : </strong> Master 1 Ingénierie des systèmes d’information à l’Université Cadi Ayyad, Faculté des Sciences Semlalia, Marrakech (FSSM).</dd>
+			<dd><strong>2016 : </strong> LICENCE en informatique à la FSSM à Marrakech.</dd>
+			<dd><strong>2015 : </strong> DEUG en sciences mathématiques et informatiques à la FSSM à Marrakech.</dd>
+			<dd><strong>2013 : </strong> Baccalauréat sciences mathématiques B à Marrakech.</dd>
  	</article>
  	<article>
  		<dt><h3>EXPERIENCES PROFESSIONNELLES</h3></dt>
@@ -67,26 +78,29 @@
 		<dd>Attestation de formation en IBM SPSS MODELER.</dd>
 		<dd>Attestation de participation au programme injaz almaghrib –Junior Achievement Company Program-.</dd>
  	</article>
- </section>
 
- <section>
+
+
  	<article>
  		<dt><h3>LANGUES</h3></dt>
- 		<dd>Arabe : Maternelle</dd>
- 		<dd>Français : DELF B2 (84/100)</dd>
-		<dd>Anglais : avancé</dd>
+ 		<dd><strong>Arabe : </strong> Maternelle</dd>
+ 		<dd><strong>Français :</strong> DELF B2 (84/100)</dd>
+		<dd><strong>Anglais :</strong> avancé</dd>
  	</article>
 	<article>
 		<dt><h3>CENTRE D’INTERET</h3></dt>
-		<dd><strong>Communication: </strong> Manager de la communication au sein de la communication au sein de la communication au sein de l’ IT CLUB FSSM 2017 - 3ème meilleur exposé SEMET (Semaine de l’étudiant FSSM)</dd>
+		<dd><strong>Communication: </strong> Manager de la communication au sein de l’ IT CLUB FSSM 2017 - 3ème meilleur exposé SEMET (Semaine de l’étudiant FSSM)</dd>
 		<dd><strong>Association : </strong>Membre de l’AFEV pour l’accompagnement des enfants en difficulté.</dd>
 		<strong><dd>Cours de soutien et aide au devoirs</dd>
 		<dd>Voyage - Danse - Musique - Lecture</dd></strong>
 	</article>
  </section>
+ </div>
 
 <footer>
-	<strong> <a href="https://www.linkedin.com/in/rajae-arhoune-205665142/">Profil LinkedIn</a> </strong>
+
+	<strong> <i class="fa fa-linkedin" aria-hidden="true"></i>
+<a href="https://www.linkedin.com/in/rajae-arhoune-205665142/" class="lien"> Profil LinkedIn</a> </strong>
 </footer>
  </div>
 
