--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -4,6 +4,7 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="css/resume.css">
+<link rel="stylesheet" type="text/css" href="css/responsive.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="http://use.edgefonts.net/source-sans-pro.js"></script>
 <meta charset="utf-8">
